[gd_scene load_steps=8 format=2]

[ext_resource path="res://recursos/imagens/robo.png" type="Texture" id=1]
[ext_resource path="res://recursos/codigo/robo.gd" type="Script" id=2]
[ext_resource path="res://recursos/imagens/sensor.png" type="Texture" id=3]
[ext_resource path="res://recursos/imagens/testlight.png" type="Texture" id=4]
[ext_resource path="res://recursos/imagens/gtestlight.png" type="Texture" id=5]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -21.5482, -35.5515, -30.1674, -29.0345, -36.6844, -19.5745, -40.2582, -10.1144, -41.3093, -1.70538, -40.048, 8.38538, -36.4742, 19.7374, -30.7981, 26.8851, -23.4403, 33.1918, -14.4006, 37.6065, -2.8383, 39.4985, 13.4129, 38.3327, 26.1726, 32.1407, 32.8998, 23.5215, 39.8372, 10.2773, 41.519, 0.186646, 39.8372, -11.5859, 35.6327, -22.0972, 29.326, -29.2448, 20.0761, -36.3924, 9.77515, -40.8071, -1.57697, -41.4377, -12.5086, -39.9662 )

[sub_resource type="CircleShape2D" id=1]
radius = 85.0475

[node name="robo" type="KinematicBody2D"]
position = Vector2( 183.112, 915.558 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
position = Vector2( -1.33633, 1.33643 )
scale = Vector2( 2, 2 )
occluder = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.215698, -0.934326 )
scale = Vector2( 0.479998, 0.479997 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 0.757
margin_left = -43.2376
margin_top = -142.617
margin_right = -3.23758
margin_bottom = -128.617
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.882353, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_right = 0.757
margin_left = -43.2376
margin_top = -142.617
margin_right = -3.23758
margin_bottom = -128.617
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.882353, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sensores" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="sens1" type="Node2D" parent="Sensores"]
position = Vector2( 6.57849, -25.8073 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens1"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens2" type="Node2D" parent="Sensores"]
position = Vector2( 14.6105, -21.7126 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens3" type="Node2D" parent="Sensores"]
position = Vector2( 21.855, -14.6256 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens3"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens4" type="Node2D" parent="Sensores"]
position = Vector2( 25.7923, -5.96368 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens4"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens5" type="Node2D" parent="Sensores"]
position = Vector2( 26.1073, 5.37561 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens5"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens6" type="Node2D" parent="Sensores"]
position = Vector2( 21.6976, 14.825 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens6"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens7" type="Node2D" parent="Sensores"]
position = Vector2( 14.9255, 22.0696 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens7"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens8" type="Node2D" parent="Sensores"]
position = Vector2( 7.36598, 26.0068 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens8"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens9" type="Node2D" parent="Sensores"]
position = Vector2( -5.23323, 26.9518 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens9"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens10" type="Node2D" parent="Sensores"]
position = Vector2( -14.8401, 22.6995 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens10"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens11" type="Node2D" parent="Sensores"]
position = Vector2( -22.5571, 16.085 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens11"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens12" type="Node2D" parent="Sensores"]
position = Vector2( -26.3369, 6.63556 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens12"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens13" type="Node2D" parent="Sensores"]
position = Vector2( -26.8094, -5.49121 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens13"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens14" type="Node2D" parent="Sensores"]
position = Vector2( -22.3996, -15.2556 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens14"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens15" type="Node2D" parent="Sensores"]
position = Vector2( -14.9976, -22.1851 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens15"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="sens16" type="Node2D" parent="Sensores"]
position = Vector2( -6.49313, -26.2798 )
__meta__ = {
"_edit_group_": true
}

[node name="art" type="Sprite" parent="Sensores/sens16"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Luzes" type="Node2D" parent="."]

[node name="luzs1" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs1"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs2" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs3" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs3"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs4" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs4"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="luzs5" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs5"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="luzs6" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs6"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs7" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs7"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs8" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs8"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs9" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs9"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs10" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs10"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs11" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs11"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs12" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs12"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs13" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs13"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs14" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs14"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs15" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs15"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="luzs16" type="Node2D" parent="Luzes"]
__meta__ = {
"_edit_group_": true
}

[node name="Art" type="Sprite" parent="Luzes/luzs16"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Ondas" type="Node2D" parent="."]

[node name="OndaSens1" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 0.246023
scale = Vector2( 2.277, -4 )

[node name="OndaSens2" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 0.577099
scale = Vector2( 2.277, -4 )

[node name="OndaSens3" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 0.983127
scale = Vector2( 2.277, -4 )

[node name="OndaSens4" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 1.34317
scale = Vector2( 2.277, -4 )

[node name="OndaSens5" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 1.77339
scale = Vector2( 2.277, -4 )

[node name="OndaSens6" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 2.18058
scale = Vector2( 2.277, -4 )

[node name="OndaSens7" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 2.55898
scale = Vector2( 2.277, -4 )

[node name="OndaSens8" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 2.87177
scale = Vector2( 2.277, -4 )

[node name="OndaSens9" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 3.33125
scale = Vector2( 2.277, -4 )

[node name="OndaSens10" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 3.70826
scale = Vector2( 2.277, -4 )

[node name="OndaSens11" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 4.09476
scale = Vector2( 2.277, -4 )

[node name="OndaSens12" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 4.45459
scale = Vector2( 2.277, -4 )

[node name="OndaSens13" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 4.89622
scale = Vector2( 2.277, -4 )

[node name="OndaSens14" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 5.28918
scale = Vector2( 2.277, -4 )

[node name="OndaSens15" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 5.68097
scale = Vector2( 2.277, -4 )

[node name="OndaSens16" type="RayCast2D" parent="Ondas"]
position = Vector2( 0.167084, -0.423157 )
rotation = 6.02992
scale = Vector2( 2.277, -4 )
